--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
 {
     "compilerOptions": {
-        "target": "es2015",
-        "module": "es2015",
-        "strict": true,
-        "moduleResolution": "node",
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "allowSyntheticDefaultImports": true,
         "sourceMap": true,
+        "allowJs": true,
+        "module": "commonjs",
+        "removeComments": true,
+        "target": "es6"
     }
 }
