--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
     "presets": [
-        ["env", {
-            "targets": {
-                "browsers": ["last 2 versions", "safari >= 7"]
-            }
-        }]
+        "@babel/env",
+        "@babel/typescript"
+    ],
+    "plugins": [
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread"
     ]
 }
