--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "bugs": {
         "url": "https://github.com/creanme/NGAHelper/issues"
     },
     "homepage": "https://github.com/creanme/NGAHelper#readme",
     "scripts": {
-        "build": "webpack --config webpack.config.js --progress --color --watch"
+        "type-check": "tsc --noEmit",
+        "type-check:watch": "npm run type-check -- --watch",
+        "build": "npm run build:types && npm run build:js",
+        "build:types": "tsc --emitDeclarationOnly",
+        "build:js": "babel src --out-dir dist/js --extensions \".ts,.tsx\" --source-maps inline"
     },
-    "dependencies": {
-        "babel": "^6.23.0",
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
-        "ts-loader": "^3.4.0",
-        "typescript": "^2.7.1",
-        "uglifyjs-webpack-plugin": "^1.1.8",
-        "webpack": "^3.10.0",
-        "webpack-dev-server": "^2.11.1",
-        "webpack-merge": "^4.1.1"
+    "devDependencies": {
+        "@babel/cli": "^7.2.0",
+        "@babel/core": "^7.2.0",
+        "@babel/plugin-proposal-class-properties": "^7.2.1",
+        "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+        "@babel/preset-env": "^7.2.0",
+        "@babel/preset-typescript": "^7.1.0",
+        "typescript": "^3.2.2"
     }
 }
