--- a/package.json
+++ b/package.json
@@ -8,26 +8,7 @@
         "url": "git+https://github.com/creanme/NGAHelper.git"
     },
     "keywords": [],
-    "author": "",
+    "author": "creanme",
     "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/creanme/NGAHelper/issues"
-    },
     "homepage": "https://github.com/creanme/NGAHelper#readme",
-    "scripts": {
-        "type-check": "tsc --noEmit",
-        "type-check:watch": "npm run type-check -- --watch",
-        "build": "npm run build:types && npm run build:js",
-        "build:types": "tsc --emitDeclarationOnly",
-        "build:js": "babel src --out-dir dist/js --extensions \".ts,.tsx\" --source-maps inline"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.2.0",
-        "@babel/core": "^7.2.0",
-        "@babel/plugin-proposal-class-properties": "^7.2.1",
-        "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
-        "@babel/preset-env": "^7.2.0",
-        "@babel/preset-typescript": "^7.1.0",
-        "typescript": "^3.2.2"
-    }
 }
